--- a/FrontEnd/Login/style1.css
+++ b/FrontEnd/Login/style1.css
@@ -1,26 +1,34 @@
 body {
-  background-color: #1cbb9b;
+    background-image: url("../../login-back.png");
+    font-style: oblique;
+    font-size-adjust: auto;
+    font-weight: 200;
+    font-family: sans-serif;
+  background-color: white;
+    height: 100%;
 }
 .login-box {
   position: relative;
-  margin: 10px auto;
+  margin: 10% auto;
   width: 500px;
-  height: 380px;
+  height: 450px;
   background-color: #fff;
   padding: 10px;
-  border-radius: 3px;
+  border-radius: 1.5%;
+    border-right: 2px;
   -webkit-box-shadow: 0px 2px 3px 0px rgba(0, 0, 0, 0.33);
   -moz-box-shadow: 0px 2px 3px 0px rgba(0, 0, 0, 0.33);
   box-shadow: 0px 2px 3px 0px rgba(0, 0, 0, 0.33);
 }
-.lb-header {
-  position: relative;
-  color: #00415d;
-  margin: 5px 5px 10px 5px;
-  padding-bottom: 10px;
-  border-bottom: 1px solid #eee;
-  text-align: center;
-  height: 28px;
+.lb-header {    
+    position: relative;
+    color: #00415d;
+    margin: 5px 5px 10px 5px;
+    padding-top: 2%;
+    padding-bottom: 2%;
+    border-bottom: 1px solid ;
+    text-align: center;
+    height: 28px;
 }
 .lb-header a {
   margin: 0 25px;
@@ -34,6 +42,7 @@ body {
   transition: all 0.1s linear;
 }
 .lb-header .active {
+    
   color: #029f5b;
   font-size: 18px;
 }
@@ -49,14 +58,15 @@ body {
   position: relative;
   float: left;
   width: calc(40% - 8px);
+    padding-left: 3%;
   text-decoration: none;
   color: #fff;
   border: 1px solid rgba(0, 0, 0, 0.05);
   padding: 12px;
   border-radius: 2px;
   font-size: 12px;
-  text-transform: uppercase;
-  margin: 0 3%;
+  margin: 3%;
+    font-size: 15px;
   text-align: center;
 }
 .social-login a i {
@@ -67,9 +77,11 @@ body {
 }
 .social-login a:first-child {
   background-color: #49639f;
+    border: 2px solid #fff;
 }
 .social-login a:last-child {
   background-color: #df4a32;
+    border: 2px solid #fff;
 }
 .email-login,
 .email-signup {
@@ -77,7 +89,8 @@ body {
   float: left;
   width: 100%;
   height: auto;
-  margin-top: 20px;
+  margin-top: 1%;
+    padding-top: 2%;
   text-align: center;
 }
 .u-form-group {
@@ -115,6 +128,7 @@ body {
 }
 .forgot-password {
   width: 50%;
+    padding-top: 3%;
   text-align: left;
   text-decoration: underline;
   color: #888;
